feat: agregué entidad GameState, contiene identificadores de entidades importantes
tiene identificador de Player, mapa actual, y celda actual

--- a/src/runner_3d/mods/runner_3d.cfg
+++ b/src/runner_3d/mods/runner_3d.cfg
@@ -4,4 +4,7 @@ GAME_ID="RUNNER_3D"
 DEPENDENCIES=[]
 PCKS=[]
 ENTITIES={
+	"GameState": {
+		"scene_file_path" : "res://src/runner_3d/entities/game_state.tscn"
+	}
 }
