--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          milestone: 0.1
           filename: issues.md
           
