feat: agregué entidad StartGame
llama al método _on_first_start al iniciar la partida por primera vez

--- a/src/runner_3d/mods/runner_3d.cfg
+++ b/src/runner_3d/mods/runner_3d.cfg
@@ -5,6 +5,9 @@ DEPENDENCIES=[]
 PCKS=[]
 ENTITIES={
 	"GameState": {
-		"scene_file_path" : "res://src/runner_3d/entities/game_state.tscn"
+		"scene_file_path": "res://src/runner_3d/entities/game_state.tscn"
+	},
+	"StartGame": {
+		"scene_file_path": "res://src/runner_3d/entities/start_game.tscn"
 	}
 }
