feat: agregué mapa MapSmokeTests

--- a/src/runner_3d/mods/runner_3d.cfg
+++ b/src/runner_3d/mods/runner_3d.cfg
@@ -9,5 +9,8 @@ ENTITIES={
 	},
 	"StartGame": {
 		"scene_file_path": "res://src/runner_3d/entities/start_game.tscn"
+	},
+	"MapSmokeTests"{
+		"scene_file_path": "res://src/runner_3d/entities/map_smoke_tests.tscn"
 	}
 }
