style: formateé el código usando gdformat

--- a/src/runner_3d/mods/runner_3d.cfg
+++ b/src/runner_3d/mods/runner_3d.cfg
@@ -10,7 +10,7 @@ ENTITIES={
 	"StartGame": {
 		"scene_file_path": "res://src/runner_3d/entities/start_game.tscn"
 	},
-	"MapSmokeTests"{
+	"MapSmokeTests": {
 		"scene_file_path": "res://src/runner_3d/entities/map_smoke_tests.tscn"
 	}
 }
