--- a/src/runner_3d/mods/runner_3d.cfg
+++ b/src/runner_3d/mods/runner_3d.cfg
@@ -12,5 +12,14 @@ ENTITIES={
 	},
 	"MapSmokeTests": {
 		"scene_file_path": "res://src/runner_3d/entities/map_smoke_tests.tscn"
+	},
+	"SceneCamera3DWithHost": {
+		"scene_file_path": "res://src/runner_3d/entities/scene_camera_3d_with_host.tscn"
+	},
+	"Camera": {
+		"scene_file_path": "res://src/runner_3d/entities/camera.tscn"
+	},
+	"ScenePhanthomCamera3D":{
+		"scene_file_path": "res://src/runner_3d/entities/scene_phantom_camera_3d.tscn"
 	}
 }
