--- a/src/runner_3d/main_mod/runner_3d.cfg
+++ b/src/runner_3d/main_mod/runner_3d.cfg
@@ -1,15 +1,60 @@
 [MOD]
 
 GAME_ID="RUNNER_3D"
-DEPENDENCIES=[]
-PCKS=[]
+PCKS=PackedStringArray()
+DEPENDENCIES=PackedStringArray()
 VERSION="0.0.1"
 
 [ENTITIES]
 
-GameState={"scene_file_path": "res://src/runner_3d/entities/game_state.tscn"}
-StartGame={"scene_file_path": "res://src/runner_3d/entities/start_game.tscn"}
-MapSmokeTests={"scene_file_path": "res://src/runner_3d/entities/map_smoke_tests.tscn"}
-SceneCamera3DWithHost={"scene_file_path": "res://src/runner_3d/entities/scene_camera_3d_with_host.tscn"}
-Camera={"scene_file_path": "res://src/runner_3d/entities/camera.tscn"}
-ScenePhanthomCamera3D={"scene_file_path": "res://src/runner_3d/entities/scene_phantom_camera_3d.tscn"}
+GameState={
+"scene_file_path": "res://src/runner_3d/entities/game_state.tscn"
+}
+StartGame={
+"scene_file_path": "res://src/runner_3d/entities/start_game.tscn"
+}
+SceneCamera3DWithHost={
+"scene_file_path": "res://src/runner_3d/entities/scene_camera_3d_with_host.tscn"
+}
+Camera={
+"scene_file_path": "res://src/runner_3d/entities/camera.tscn"
+}
+ScenePhanthomCamera3D={
+"scene_file_path": "res://src/runner_3d/entities/scene_phantom_camera_3d.tscn"
+}
+MapSmokeTests={
+"PROPERTIES": {
+"_enabled": false,
+"_unique": true,
+"process_mode": 0
+},
+"scene_file_path": "res://src/runner_3d/gd/map/map.tscn"
+}
+MapSmokeTestsCell0={
+"PROPERTIES": {
+"_grid_x": 0,
+"_grid_y": 0,
+"_grid_z": 0,
+"_map_ref": {
+"PROPERTIES": {
+"_entity_id": "MapSmokeTests"
+}
+},
+"_physical_cell_file_path": "res://src/runner_3d/gd/map/smoke_tests/physical_cell_0.tscn"
+},
+"scene_file_path": "res://src/runner_3d/gd/cell/cell.tscn"
+}
+MapSmokeTestsCell1={
+"PROPERTIES": {
+"_grid_x": 1,
+"_grid_y": 0,
+"_grid_z": 0,
+"_map_ref": {
+"PROPERTIES": {
+"_entity_id": "MapSmokeTests"
+}
+},
+"_physical_cell_file_path": "res://src/runner_3d/gd/map/smoke_tests/physical_cell_1.tscn"
+},
+"scene_file_path": "res://src/runner_3d/gd/cell/cell.tscn"
+}
