feat(Character): al activarse, agrega PhysicalCharacter

--- a/src/runner_3d/main_mod/runner_3d.cfg
+++ b/src/runner_3d/main_mod/runner_3d.cfg
@@ -13,6 +13,12 @@ GameState={
 StartGame={
 "scene_file_path": "res://src/runner_3d/entities/start_game.tscn"
 }
+CharacterPlayer={
+"scene_file_path": "res://src/runner_3d/entities/character_player.tscn"
+}
+ScenePhysicalCharacterPlayer={
+"scene_file_path": "res://src/runner_3d/entities/scene_physical_character_player.tscn"
+}
 SceneCamera3DWithHost={
 "scene_file_path": "res://src/runner_3d/entities/scene_camera_3d_with_host.tscn"
 }
