feat(MapCreator): reconocé SpawnPoint y agrega su información al fichero cfg

--- a/src/runner_3d/main_mod/runner_3d.cfg
+++ b/src/runner_3d/main_mod/runner_3d.cfg
@@ -50,6 +50,21 @@ MapSmokeTestsCell0={
 },
 "scene_file_path": "res://src/runner_3d/gd/cell/cell.tscn"
 }
+MapSmokeTestsCell0SpawnPoint={
+"PROPERTIES": {
+"_location": {
+"PROPERTIES": {
+"_cell_ref": {
+"PROPERTIES": {
+"_entity_id": "MapSmokeTestsCell0"
+}
+},
+"_transform_3d": Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 1, 2)
+}
+}
+},
+"scene_file_path": "res://src/runner_3d/gd/spawn_point/spawn_point.tscn"
+}
 MapSmokeTestsCell1={
 "PROPERTIES": {
 "_grid_x": 1,
